# Horizons

./: .gitignore  CMakeLists.txt  README.md  stella.sh  win_build.sh  zig-win.cmake
.github/workflows/: continuous-build.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  getting-started.md
scripts/: zig-ar  zig-cc  zig-cxx  zig-ranlib
src/: AssetManager.cpp  AssetManager.hpp  Components.cpp  Components.hpp  ConfigManager.cpp  ConfigManager.hpp  Enums.hpp  Events.hpp  Functions.cpp  Functions.hpp  Game.cpp  Game.hpp  Logger.hpp  Systems.cpp  Systems.hpp  Timer.cpp  Timer.hpp  main.cpp
